--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -43,6 +43,7 @@ jobs:
       BRANCH: ${{ steps.extract_branch.outputs.BRANCH }}
       BRANCH_SLUG: ${{ steps.extract_branch.outputs.BRANCH_SLUG }}
       VERSION: ${{ steps.get_version.outputs.VERSION }}
+      PUSH_IMAGE: ${{ steps.get_version.outputs.PUSH_IMAGE }}
       DATE: ${{ steps.get_datetime.outputs.DATE }}
       TIME: ${{ steps.get_datetime.outputs.TIME }}
       DATETIME: ${{ steps.get_datetime.outputs.DATETIME }}
@@ -84,13 +85,16 @@ jobs:
           if [[ "$BRANCH" == "release-"* ]]; then
             # Release Branch: extract version from branch name
             VERSION=${BRANCH#"release-"}
+            PUSH_IMAGE="true"
             else
             if [[ "$BRANCH" == "master" ]]; then
               # master branch = latest-dev
               VERSION="${GIT_NEXT_TAG}-dev"
+              PUSH_IMAGE="true"
             else
               # Feature/Development Branch - use last tag with branch slug
               VERSION="${GIT_NEXT_TAG}-dev-${BRANCH_SLUG}"
+              PUSH_IMAGE="false"
             fi
           fi
 
@@ -133,6 +137,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/podtato-main/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/podtato-main/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -174,6 +179,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/right-leg/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/right-leg/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -215,6 +221,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/left-leg/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/left-leg/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -256,6 +263,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/right-arm/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/right-arm/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -297,6 +305,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/left-arm/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/left-arm/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -338,6 +347,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: podtato-services/hats/.
+          push: ${{ env.PUSH_IMAGE }}
           file: podtato-services/left-arm/docker/Dockerfile
           platforms: linux/amd64
           tags: |
