--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -85,16 +85,16 @@ jobs:
           if [[ "$BRANCH" == "release-"* ]]; then
             # Release Branch: extract version from branch name
             VERSION=${BRANCH#"release-"}
-            PUSH_IMAGE="true"
+            PUSH_IMAGE=true
             else
             if [[ "$BRANCH" == "master" ]]; then
               # master branch = latest-dev
               VERSION="${GIT_NEXT_TAG}-dev"
-              PUSH_IMAGE="true"
+              PUSH_IMAGE=true
             else
               # Feature/Development Branch - use last tag with branch slug
               VERSION="${GIT_NEXT_TAG}-dev-${BRANCH_SLUG}"
-              PUSH_IMAGE="false"
+              PUSH_IMAGE=false
             fi
           fi
 
