--- a/delivery/manifest/manifest.yaml
+++ b/delivery/manifest/manifest.yaml
@@ -21,7 +21,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image:  ghcr.io/podtato-head/podtato-main:v0.1.0
+        image:  ghcr.io/podtato-head/podtato-main:v1-latest-dev
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
@@ -63,7 +63,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/podtato-hats:v0.1.0
+          image:  ghcr.io/podtato-head/podtato-hats:v1-latest-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -105,7 +105,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/podtato-left-leg:v0.1.0
+          image:  ghcr.io/podtato-head/podtato-left-leg:v1-latest-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -147,7 +147,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/podtato-left-arm:v0.1.0
+          image:  ghcr.io/podtato-head/podtato-left-arm:v1-latest-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -189,7 +189,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/podtato-right-leg:v0.1.0
+          image:  ghcr.io/podtato-head/podtato-right-leg:v1-latest-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -231,7 +231,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/podtato-right-arm:v0.1.0
+          image:  ghcr.io/podtato-head/podtato-right-arm:v1-latest-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
