--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -140,7 +140,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           build-args: |
-            VERSION="${{ matrix.version }}"
+            VERSION=${{ matrix.version }}
           context: podtato-services/${{ matrix.component }}/.
           push: ${{ github.event_name == 'pull_request' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
           file: podtato-services/${{ matrix.component }}/docker/Dockerfile
