--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -177,4 +177,4 @@ jobs:
       - name: Test Deployment
         run: |
           sed 's/latest-dev/${{ env.VERSION }}/g' delivery/manifest/manifest.yaml | kubectl apply -f -
-          kubectl wait --for=condition=ready pod --all -n demospace -t 120
+          kubectl wait --for=condition=ready pod --all -n demospace --timeout=120s
