--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -176,6 +176,6 @@ jobs:
 
       - name: Test Deployment
         run: |
-          sed 's/latest-dev/${{ env.VERSION }}/g' delivery/manifest/manifest.yaml | kubectl apply -f -
+          sed "s/latest-dev/${{ env.VERSION }}/g" delivery/manifest/manifest.yaml | kubectl apply -f -
           kubectl get deploy -A -n demospace -owide
           kubectl wait --for=condition=ready --timeout=120s pod --all -n demospace
